APIs/googleapis.com/cloudresourcemanager/v1/python-client/README.md
# openapi-client
Creates, reads, and updates metadata for Google Cloud Platform resource containers.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://cloudresourcemanager.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://cloudresourcemanager.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.LiensApi(api_client)
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    lien = openapi_client.Lien() # Lien |  (optional)

    try:
        api_response = api_instance.cloudresourcemanager_liens_create(xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, lien=lien)
        print("The response of LiensApi->cloudresourcemanager_liens_create:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling LiensApi->cloudresourcemanager_liens_create: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudresourcemanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*LiensApi* | [**cloudresourcemanager_liens_create**](docs/LiensApi.md#cloudresourcemanager_liens_create) | **POST** /v1/liens | 
*LiensApi* | [**cloudresourcemanager_liens_delete**](docs/LiensApi.md#cloudresourcemanager_liens_delete) | **DELETE** /v1/{name} | 
*LiensApi* | [**cloudresourcemanager_liens_list**](docs/LiensApi.md#cloudresourcemanager_liens_list) | **GET** /v1/liens | 
*OrganizationsApi* | [**cloudresourcemanager_organizations_get**](docs/OrganizationsApi.md#cloudresourcemanager_organizations_get) | **GET** /v1/{name} | 
*OrganizationsApi* | [**cloudresourcemanager_organizations_get_iam_policy**](docs/OrganizationsApi.md#cloudresourcemanager_organizations_get_iam_policy) | **POST** /v1/{resource}:getIamPolicy | 
*OrganizationsApi* | [**cloudresourcemanager_organizations_search**](docs/OrganizationsApi.md#cloudresourcemanager_organizations_search) | **POST** /v1/organizations:search | 
*OrganizationsApi* | [**cloudresourcemanager_organizations_set_iam_policy**](docs/OrganizationsApi.md#cloudresourcemanager_organizations_set_iam_policy) | **POST** /v1/{resource}:setIamPolicy | 
*OrganizationsApi* | [**cloudresourcemanager_organizations_test_iam_permissions**](docs/OrganizationsApi.md#cloudresourcemanager_organizations_test_iam_permissions) | **POST** /v1/{resource}:testIamPermissions | 
*ProjectsApi* | [**cloudresourcemanager_projects_clear_org_policy**](docs/ProjectsApi.md#cloudresourcemanager_projects_clear_org_policy) | **POST** /v1/{resource}:clearOrgPolicy | 
*ProjectsApi* | [**cloudresourcemanager_projects_create**](docs/ProjectsApi.md#cloudresourcemanager_projects_create) | **POST** /v1/projects | 
*ProjectsApi* | [**cloudresourcemanager_projects_delete**](docs/ProjectsApi.md#cloudresourcemanager_projects_delete) | **DELETE** /v1/projects/{projectId} | 
*ProjectsApi* | [**cloudresourcemanager_projects_get**](docs/ProjectsApi.md#cloudresourcemanager_projects_get) | **GET** /v1/projects/{projectId} | 
*ProjectsApi* | [**cloudresourcemanager_projects_get_ancestry**](docs/ProjectsApi.md#cloudresourcemanager_projects_get_ancestry) | **POST** /v1/projects/{projectId}:getAncestry | 
*ProjectsApi* | [**cloudresourcemanager_projects_get_effective_org_policy**](docs/ProjectsApi.md#cloudresourcemanager_projects_get_effective_org_policy) | **POST** /v1/{resource}:getEffectiveOrgPolicy | 
*ProjectsApi* | [**cloudresourcemanager_projects_get_iam_policy**](docs/ProjectsApi.md#cloudresourcemanager_projects_get_iam_policy) | **POST** /v1/projects/{resource}:getIamPolicy | 
*ProjectsApi* | [**cloudresourcemanager_projects_get_org_policy**](docs/ProjectsApi.md#cloudresourcemanager_projects_get_org_policy) | **POST** /v1/{resource}:getOrgPolicy | 
*ProjectsApi* | [**cloudresourcemanager_projects_list**](docs/ProjectsApi.md#cloudresourcemanager_projects_list) | **GET** /v1/projects | 
*ProjectsApi* | [**cloudresourcemanager_projects_list_available_org_policy_constraints**](docs/ProjectsApi.md#cloudresourcemanager_projects_list_available_org_policy_constraints) | **POST** /v1/{resource}:listAvailableOrgPolicyConstraints | 
*ProjectsApi* | [**cloudresourcemanager_projects_list_org_policies**](docs/ProjectsApi.md#cloudresourcemanager_projects_list_org_policies) | **POST** /v1/{resource}:listOrgPolicies | 
*ProjectsApi* | [**cloudresourcemanager_projects_set_iam_policy**](docs/ProjectsApi.md#cloudresourcemanager_projects_set_iam_policy) | **POST** /v1/projects/{resource}:setIamPolicy | 
*ProjectsApi* | [**cloudresourcemanager_projects_set_org_policy**](docs/ProjectsApi.md#cloudresourcemanager_projects_set_org_policy) | **POST** /v1/{resource}:setOrgPolicy | 
*ProjectsApi* | [**cloudresourcemanager_projects_test_iam_permissions**](docs/ProjectsApi.md#cloudresourcemanager_projects_test_iam_permissions) | **POST** /v1/projects/{resource}:testIamPermissions | 
*ProjectsApi* | [**cloudresourcemanager_projects_undelete**](docs/ProjectsApi.md#cloudresourcemanager_projects_undelete) | **POST** /v1/projects/{projectId}:undelete | 
*ProjectsApi* | [**cloudresourcemanager_projects_update**](docs/ProjectsApi.md#cloudresourcemanager_projects_update) | **PUT** /v1/projects/{projectId} | 


## Documentation For Models

 - [Ancestor](docs/Ancestor.md)
 - [AuditConfig](docs/AuditConfig.md)
 - [AuditLogConfig](docs/AuditLogConfig.md)
 - [Binding](docs/Binding.md)
 - [BooleanPolicy](docs/BooleanPolicy.md)
 - [ClearOrgPolicyRequest](docs/ClearOrgPolicyRequest.md)
 - [CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation.md)
 - [CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation.md)
 - [Constraint](docs/Constraint.md)
 - [CreateFolderMetadata](docs/CreateFolderMetadata.md)
 - [CreateProjectMetadata](docs/CreateProjectMetadata.md)
 - [Expr](docs/Expr.md)
 - [FolderOperation](docs/FolderOperation.md)
 - [FolderOperationError](docs/FolderOperationError.md)
 - [GetAncestryResponse](docs/GetAncestryResponse.md)
 - [GetEffectiveOrgPolicyRequest](docs/GetEffectiveOrgPolicyRequest.md)
 - [GetIamPolicyRequest](docs/GetIamPolicyRequest.md)
 - [GetOrgPolicyRequest](docs/GetOrgPolicyRequest.md)
 - [GetPolicyOptions](docs/GetPolicyOptions.md)
 - [Lien](docs/Lien.md)
 - [ListAvailableOrgPolicyConstraintsRequest](docs/ListAvailableOrgPolicyConstraintsRequest.md)
 - [ListAvailableOrgPolicyConstraintsResponse](docs/ListAvailableOrgPolicyConstraintsResponse.md)
 - [ListConstraint](docs/ListConstraint.md)
 - [ListLiensResponse](docs/ListLiensResponse.md)
 - [ListOrgPoliciesRequest](docs/ListOrgPoliciesRequest.md)
 - [ListOrgPoliciesResponse](docs/ListOrgPoliciesResponse.md)
 - [ListPolicy](docs/ListPolicy.md)
 - [ListProjectsResponse](docs/ListProjectsResponse.md)
 - [MoveFolderMetadata](docs/MoveFolderMetadata.md)
 - [Operation](docs/Operation.md)
 - [OrgPolicy](docs/OrgPolicy.md)
 - [Organization](docs/Organization.md)
 - [OrganizationOwner](docs/OrganizationOwner.md)
 - [Policy](docs/Policy.md)
 - [Project](docs/Project.md)
 - [ProjectCreationStatus](docs/ProjectCreationStatus.md)
 - [ResourceId](docs/ResourceId.md)
 - [SearchOrganizationsRequest](docs/SearchOrganizationsRequest.md)
 - [SearchOrganizationsResponse](docs/SearchOrganizationsResponse.md)
 - [SetIamPolicyRequest](docs/SetIamPolicyRequest.md)
 - [SetOrgPolicyRequest](docs/SetOrgPolicyRequest.md)
 - [Status](docs/Status.md)
 - [TestIamPermissionsRequest](docs/TestIamPermissionsRequest.md)
 - [TestIamPermissionsResponse](docs/TestIamPermissionsResponse.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
 - **https://www.googleapis.com/auth/cloud-platform.read-only**: View your data across Google Cloud services and see the email address of your Google Account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
 - **https://www.googleapis.com/auth/cloud-platform.read-only**: View your data across Google Cloud services and see the email address of your Google Account


## Author




