APIs/googleapis.com/cloudresourcemanager/v2/python-client/README.md
# openapi-client
Creates, reads, and updates metadata for Google Cloud Platform resource containers.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://cloudresourcemanager.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://cloudresourcemanager.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.FoldersApi(api_client)
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    parent = 'parent_example' # str | Required. The resource name of the new Folder's parent. Must be of the form `folders/{folder_id}` or `organizations/{org_id}`. (optional)
    folder = openapi_client.Folder() # Folder |  (optional)

    try:
        api_response = api_instance.cloudresourcemanager_folders_create(xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, parent=parent, folder=folder)
        print("The response of FoldersApi->cloudresourcemanager_folders_create:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling FoldersApi->cloudresourcemanager_folders_create: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudresourcemanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FoldersApi* | [**cloudresourcemanager_folders_create**](docs/FoldersApi.md#cloudresourcemanager_folders_create) | **POST** /v2/folders | 
*FoldersApi* | [**cloudresourcemanager_folders_delete**](docs/FoldersApi.md#cloudresourcemanager_folders_delete) | **DELETE** /v2/{name} | 
*FoldersApi* | [**cloudresourcemanager_folders_get**](docs/FoldersApi.md#cloudresourcemanager_folders_get) | **GET** /v2/{name} | 
*FoldersApi* | [**cloudresourcemanager_folders_get_iam_policy**](docs/FoldersApi.md#cloudresourcemanager_folders_get_iam_policy) | **POST** /v2/{resource}:getIamPolicy | 
*FoldersApi* | [**cloudresourcemanager_folders_list**](docs/FoldersApi.md#cloudresourcemanager_folders_list) | **GET** /v2/folders | 
*FoldersApi* | [**cloudresourcemanager_folders_move**](docs/FoldersApi.md#cloudresourcemanager_folders_move) | **POST** /v2/{name}:move | 
*FoldersApi* | [**cloudresourcemanager_folders_patch**](docs/FoldersApi.md#cloudresourcemanager_folders_patch) | **PATCH** /v2/{name} | 
*FoldersApi* | [**cloudresourcemanager_folders_search**](docs/FoldersApi.md#cloudresourcemanager_folders_search) | **POST** /v2/folders:search | 
*FoldersApi* | [**cloudresourcemanager_folders_set_iam_policy**](docs/FoldersApi.md#cloudresourcemanager_folders_set_iam_policy) | **POST** /v2/{resource}:setIamPolicy | 
*FoldersApi* | [**cloudresourcemanager_folders_test_iam_permissions**](docs/FoldersApi.md#cloudresourcemanager_folders_test_iam_permissions) | **POST** /v2/{resource}:testIamPermissions | 
*FoldersApi* | [**cloudresourcemanager_folders_undelete**](docs/FoldersApi.md#cloudresourcemanager_folders_undelete) | **POST** /v2/{name}:undelete | 
*OperationsApi* | [**cloudresourcemanager_operations_get**](docs/OperationsApi.md#cloudresourcemanager_operations_get) | **GET** /v1/{name} | 


## Documentation For Models

 - [AuditConfig](docs/AuditConfig.md)
 - [AuditLogConfig](docs/AuditLogConfig.md)
 - [Binding](docs/Binding.md)
 - [CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation.md)
 - [CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation.md)
 - [CreateFolderMetadata](docs/CreateFolderMetadata.md)
 - [CreateProjectMetadata](docs/CreateProjectMetadata.md)
 - [Expr](docs/Expr.md)
 - [Folder](docs/Folder.md)
 - [FolderOperation](docs/FolderOperation.md)
 - [FolderOperationError](docs/FolderOperationError.md)
 - [GetIamPolicyRequest](docs/GetIamPolicyRequest.md)
 - [GetPolicyOptions](docs/GetPolicyOptions.md)
 - [ListFoldersResponse](docs/ListFoldersResponse.md)
 - [MoveFolderMetadata](docs/MoveFolderMetadata.md)
 - [MoveFolderRequest](docs/MoveFolderRequest.md)
 - [Operation](docs/Operation.md)
 - [Policy](docs/Policy.md)
 - [ProjectCreationStatus](docs/ProjectCreationStatus.md)
 - [SearchFoldersRequest](docs/SearchFoldersRequest.md)
 - [SearchFoldersResponse](docs/SearchFoldersResponse.md)
 - [SetIamPolicyRequest](docs/SetIamPolicyRequest.md)
 - [Status](docs/Status.md)
 - [TestIamPermissionsRequest](docs/TestIamPermissionsRequest.md)
 - [TestIamPermissionsResponse](docs/TestIamPermissionsResponse.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
 - **https://www.googleapis.com/auth/cloud-platform.read-only**: View your data across Google Cloud services and see the email address of your Google Account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
 - **https://www.googleapis.com/auth/cloud-platform.read-only**: View your data across Google Cloud services and see the email address of your Google Account


## Author




